--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
     "bootstrap": "^5.3.6",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.8"
