Added backend, Sign in, login and create a listing

--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
-PORT=5173
+PORT=3000
 
 # Production
-PROD_DB_URL=mongodb+srv://nicw:OneTwoThree@airbnb.mxuqz5i.mongodb.net/,
+PROD_DB_URL=mongodb+srv://nicw:OneTwoThree@airbnb.mxuqz5i.mongodb.net/AirBnb_Clone
+PROD_JWT_SECRET_KEY=secret_key
+PROD_JWT_REFRESH_SECRET_KEY=secret_key
 
 # Development
-DEV_DB_URL=mongodb+srv://nicw:OneTwoThree@airbnb.mxuqz5i.mongodb.net/,
+DEV_DB_URL=mongodb+srv://nicw:OneTwoThree@airbnb.mxuqz5i.mongodb.net/AirBnb_Clone
+DEV_JWT_SECRET_KEY=secret_key
+DEV_JWT_REFRESH_SECRET_KEY=secret_key
+
+# Redis 
+SERVER_REDIS_USERNAME=Nicolas
+SERVER_REDIS_PASSWORD=Nicola$1
+SERVER_REDIS_HOST=redis-16567.c341.af-south-1-1.ec2.redns.redis-cloud.com:16567
+SERVER_REDIS_PORT=16567
