--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airbnb-capstone-project",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,22 +16,37 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.13",
+    "@types/nodemon": "^1.19.6",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.6",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "dropzone": "^6.0.0-beta.2",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
+    "node": "^24.2.0",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
+    "redis": "^5.5.6",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.0",
+    "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
