--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "dist",
+    "sourceMap": false,
+    "declaration": true,
+    "lib": ["es2017.object", "es2015", "es2017", "dom"],
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "files": ["./node_modules/@types/node/index.d.ts"],
+  "include": ["src/**/*.ts", "package.json"],
   "exclude": ["node_modules"]
 }
