--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "ts-node --max-old-space-size=4096 src/index.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
