changed listings to upload images to storage

--- a/.env
+++ b/.env
@@ -15,3 +15,7 @@ SERVER_REDIS_USERNAME=Nicolas
 SERVER_REDIS_PASSWORD=Nicola$1
 SERVER_REDIS_HOST=redis-16567.c341.af-south-1-1.ec2.redns.redis-cloud.com:16567
 SERVER_REDIS_PORT=16567
+
+CLOUDINARY_CLOUD_NAME=dvfzc4yrx
+CLOUDINARY_API_KEY=638527984997446
+CLOUDINARY_API_SECRET=KXXAfGqITRUXeds2PHnp72s9DM4
