--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.6",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node": "^24.2.0",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
